# XRTC_Server

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: conf.cpp.6E0BAFE49D7A7710.idx  conf.h.84B82D4F04D2CD0F.idx  main.cpp.E92CFEFA640C6B36.idx
conf/: general.yaml  signaling_server.yaml
log/: xrtcserver.log.wf
src/: main.cpp  xrtcserver_def.h
src/base/: conf.cpp  conf.h  event_loop.cpp  event_loop.h  lock_free_queue.h  log.cpp  log.h  network.cpp  network.h  socket.cpp  socket.h  x_header.h
src/ice/: candidate.cpp  candidate.h  ice_agent.cpp  ice_agent.h  ice_credentials.cpp  ice_credentials.h  ice_def.cpp  ice_def.h  ice_transport_channel.cpp  ice_transport_channel.h  port_allocator.cpp  port_allocator.h  udp_port.cpp  udp_port.h
src/pc/: codec_info.h  peer_connection.cpp  peer_connection.h  session_description.cpp  session_description.h  transport_controller.cpp  transport_controller.h
src/server/: rtc_server.cpp  rtc_server.h  rtc_worker.cpp  rtc_worker.h  signaling_server.cpp  signaling_server.h  signaling_worker.cpp  signaling_worker.h  tcp_connection.cpp  tcp_connection.h
src/stream/: push_stream.cpp  push_stream.h  rtc_stream.cpp  rtc_stream.h  rtc_stream_manager.cpp  rtc_stream_manager.h
third_part/include/absl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
third_part/include/absl/algorithm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
third_part/include/absl/base/: CTestTestfile.cmake  Makefile  cmake_install.cmake
third_part/include/absl/cleanup/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+54 files in other folders)
